clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_iamin<float> = rocblas_isamin;
template <>
static constexpr auto rocblas_iamin<double> = rocblas_idamin;
template <>
static constexpr auto rocblas_iamin<rocblas_float_complex> = rocblas_icamin;
template <>
static constexpr auto rocblas_iamin<rocblas_double_complex> = rocblas_izamin;
template <>
static constexpr auto rocblas_iamin_batched<float> = rocblas_isamin_batched;
template <>
static constexpr auto rocblas_iamin_batched<double> = rocblas_idamin_batched;
template <>
static constexpr auto rocblas_iamin_batched<rocblas_float_complex> = rocblas_icamin_batched;
template <>
static constexpr auto rocblas_iamin_batched<rocblas_double_complex> = rocblas_izamin_batched;
template <>
static constexpr auto rocblas_iamin_strided_batched<float> = rocblas_isamin_strided_batched;
template <>
static constexpr auto rocblas_iamin_strided_batched<double> = rocblas_idamin_strided_batched;
template <>
static constexpr auto
    rocblas_iamin_strided_batched<rocblas_float_complex> = rocblas_icamin_strided_batched;
template <>
static constexpr auto
    rocblas_iamin_strided_batched<rocblas_double_complex> = rocblas_izamin_strided_batched;
template <>
static constexpr auto rocblas_rot<float> = rocblas_srot;
template <>
static constexpr auto rocblas_rot<double> = rocblas_drot;
template <>
static constexpr auto
    rocblas_rot<rocblas_float_complex, float, rocblas_float_complex> = rocblas_crot;
template <>
static constexpr auto rocblas_rot<rocblas_float_complex, float, float> = rocblas_csrot;
template <>
static constexpr auto
    rocblas_rot<rocblas_double_complex, double, rocblas_double_complex> = rocblas_zrot;
template <>
static constexpr auto rocblas_rot<rocblas_double_complex, double, double> = rocblas_zdrot;
template <>
static constexpr auto rocblas_rot_batched<float> = rocblas_srot_batched;
template <>
static constexpr auto rocblas_rot_batched<double> = rocblas_drot_batched;